# WinterTask

./: .gitmodules  CMakeLists.txt  OpenCVTask.cpp  OpenCVTask.h  README.md  main.cpp  task.cpp  task.h
OpenCV/: finalTask.cpp  task.h  task1.cpp  task10.cpp  task13.cpp  task2and3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp
opencv_learn/: README.md  main.cpp
opencv_learn/OpenCV/: task.h  task11.cpp  task12.cpp  task14.cpp  task9.cpp
pytorch_learn/: .gitignore  TensorBoard.py  dataloader.py  model.py  nn_CIFAR10.py  nn_NonLinear.py  nn_conv.py  nn_conv2D.py  nn_linear.py  nn_maxpool.py  nn_module.py  nn_optim.py  train_test.py  transform.py
pytorch_learn/CIFAR10/: colab.py  local.py  model.py  xyl.py
pytorch_learn/CIFAR10/logs/: events.out.tfevents.1677565250.jalen.12038.0  events.out.tfevents.1677585607.jalen.5630.0  events.out.tfevents.1677838210.jalen.6068.0
pytorch_learn/MNIST/: main.py  new.py
pytorch_learn/MNIST/logs/: events.out.tfevents.1677410436.jalen.41974.0  events.out.tfevents.1677410563.jalen.42041.0  events.out.tfevents.1677496189.jalen.13588.0
pytorch_learn/MNIST/model/: test_0.pth  test_1.pth  test_2.pth  test_3.pth  test_4.pth
pytorch_learn/logs/: events.out.tfevents.1677379283.jalen.23502.0  events.out.tfevents.1677380791.jalen.24333.0  events.out.tfevents.1677380800.jalen.24347.0  events.out.tfevents.1677496152.jalen.13561.0
pytorch_learn/model/train_test/: test_0.pth  test_1.pth  test_2.pth  test_3.pth
yolov5/: .gitignore  my_detect.py  my_train.py
yolov5/data/: soft_drink.yaml
yolov5/runs/train/exp/: opt.yaml  (+1 more)
(+17 files in other folders)
